Add Manager Page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -37,13 +37,31 @@ body {
     color: #ffffff;
 }
 
+.form-control.inputField {
+    font-size: 26px;
+}
+
+
 .hide {
     display: none;
+}
+
+button.dropdown-item {
+    font-size: 16px;
 }
 
 #error {
     background-color: #fa3aa0;
     color: #000000;
+}
+
+#inv-dropdown {
+    margin-right: 30px;
+    margin-left: 20px;
+}
+
+#addStock-btn {
+    font-size: inherit;
 }
 
 @media screen and (min-width: 320px) {
